fix: Improve styles spacing

--- a/components/markdown/style.module.css
+++ b/components/markdown/style.module.css
@@ -1,2 +1,5 @@
 .markdown-container {
+  display: flex;
+  flex-flow: column;
+  gap: var(--margin-02);
 }
