--- a/pages/recursos/style.module.css
+++ b/pages/recursos/style.module.css
@@ -5,4 +5,7 @@
 }
 
 .wrapper {
+  display: flex;
+  flex-flow: column;
+  gap: var(--margin-02);
 }
