--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,7 +11,7 @@ h1,
 h2,
 h3,
 h4 {
-  font-family: var(--font-serif);
+  font-family: var(--font-mono);
   line-height: 1.3;
 }
 
